keel/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keel
  namespace: kube-system
  labels:
    app: keel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keel
  template:
    metadata:
      labels:
        app: keel
    spec:
      nodeSelector:
        kubernetes.io/arch: arm
      serviceAccountName: keel
      containers:
        - name: keel
          image: tedyst/keel:latest
          imagePullPolicy: Always
          command: ["/bin/keel"]
          ports:
            - containerPort: 9300
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9300
            initialDelaySeconds: 30
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
