keel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keel
  namespace: kube-system
  labels:
    app: keel
spec:
  ports:
    - port: 9300
      targetPort: 9300
      protocol: TCP
      name: keel
  selector:
    app: keel
  sessionAffinity: None
